--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@next/font": "^13.2.4",
+    "@supabase/supabase-js": "^2.13.0",
     "axios": "^1.3.4",
     "canvas-confetti": "^1.6.0",
     "clsx": "^1.2.1",
@@ -43,6 +44,7 @@
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.15",
+    "encoding": "^0.1.13",
     "eslint": "^8.35.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
