--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "canvas-confetti": "^1.6.0",
     "clsx": "^1.2.1",
     "framer-motion": "^10.8.4",
+    "lodash.clonedeep": "^4.5.0",
     "next": "^13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -36,6 +37,7 @@
     "@commitlint/cz-commitlint": "^17.4.4",
     "@next/bundle-analyzer": "^13.2.4",
     "@types/canvas-confetti": "^1.6.0",
+    "@types/lodash.clonedeep": "^4.5.7",
     "@types/node": "^18.15.0",
     "@types/react": "^18.0.28",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
